fix some page's layout, modify scrollbar

--- a/WebContent/css/customStyle.css
+++ b/WebContent/css/customStyle.css
@@ -1,3 +1,24 @@
+/* 
+** --- SCROLLBAR ---
+*/
+::-webkit-scrollbar
+{
+  width: 6px;  /* for vertical scrollbars */
+  height: 12px; /* for horizontal scrollbars */
+}
+
+::-webkit-scrollbar-track
+{
+  background: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb
+{
+  background: rgba(0, 0, 0, 0.5);
+}
+
+/*
+
 /*
 ** universal style
 */
@@ -17,26 +38,13 @@ footer .members {
   padding: 0px;
 }
 
+.row {
+	margin-left:0px;
+	margin-right:0px;
+}
+
 nav.navbar {
   margin-bottom: 20px;
-}
-
-::-webkit-scrollbar-track
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-    background-color: #F5F5F5;
-}
-
-::-webkit-scrollbar
-{
-    width: 12px;
-    background-color: #F5F5F5;
-}
-
-::-webkit-scrollbar-thumb
-{
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-    background-color: #555;
 }
 
 .col-no-spacing {
@@ -47,6 +55,10 @@ nav.navbar {
 
 label.error {
 	color:red;	
+}
+
+.hidden {
+	visibility: hidden;	
 }
 
 /*
